--- a/pomodoro/src/style/app.scss
+++ b/pomodoro/src/style/app.scss
@@ -7,7 +7,7 @@ body {
   background: #304030;
   overflow: hidden;
 }
-.left-navbar {
+#left-navbar {
   top: 0px;
   left: 0px;
   width: 80px;
@@ -21,87 +21,90 @@ body {
   justify-content: center;
   align-items: center;
   font-weight: 600;
+  .btns {
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease-out;
+  }
+  .btns:hover {
+    background: white;
+  }
 }
-.b-sidebar-header {
-  display: none !important;
+
+#sidebar-list{
+  .b-sidebar-header {
+    display: none !important;
+    height: 80px;
+  }
+  .list-outer {
+    padding-top: 80px;
+  }
+  .text-outer {
+    padding-top: 30px;
+    .form-control {
+      border:none;
+      border-radius: 40px;
+      height: 55px;
+      margin-top: 20px;
+      padding-left: 25px;
+      position: relative;
+      font-weight: 600;
+    }
+    .form-control:focus {
+      border:none;
+      outline: none;
+      box-shadow: none;
+    }
+    .submit {
+      background: #F08448;
+      border: none;
+      position: absolute;
+      right: 60px;
+      top: 185px;
+      padding: 5px 8px;
+    }
+    .submit:active,
+    .submit:hover {
+      background:#F07448 !important;
+      border: none;
+      box-shadow: none;
+    }
+    .submit:focus {
+      background:#F08448 !important;
+      border: none;
+      box-shadow: none;
+    }
+  }
+  .text-color {
+    color: #e8e8e8;
+    .opacity-50 {
+      opacity: 50%;
+    }
+  }
+  .b-sidebar-body {
+    padding: 0 50px;
+  }
+  .btn .b-icon.bi {
+    font-size: 200%;
+    vertical-align: middle;
+    border: none;
+  }
+  .btn .b-icon.bi:active {
+    border: 0;
+  }
 }
-.list-outer {
-  padding-top: 80px;
-}
-.text-outer {
-  padding-top: 30px;
-}
-.btns {
-  width: 80px;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 300ms ease-out;
-}
-.btns:hover {
-  background: white;
-}
+
 #sidebar-1,
 #sidebar-2 {
   padding-left: 80px;
   background-color: #304030 !important;
   font-weight: 600;
 }
-.text-color {
-  color: #e8e8e8;
-}
-.b-sidebar-body {
-  padding: 0 50px;
-}
-.opacity-50 {
-  opacity: 50%;
-}
-.b-sidebar-header {
-  height: 80px;
-}
-.form-control {
-  border:none;
-  border-radius: 40px;
-  height: 55px;
-  margin-top: 20px;
-  padding-left: 25px;
-  position: relative;
-  font-weight: 600;
-}
-.form-control:focus {
-  border:none;
-  outline: none;
-  box-shadow: none;
-}
-.submit {
-  background: #F08448;
-  border: none;
-  position: absolute;
-  right: 60px;
-  top: 185px;
-  padding: 5px 8px;
-}
-.submit:active,
-.submit:hover {
-  background:#F07448 !important;
-  border: none;
-  box-shadow: none;
-}
-.submit:focus {
-  background:#F08448 !important;
-  border: none;
-  box-shadow: none;
-}
-.btn .b-icon.bi {
-  font-size: 200%;
-  vertical-align: middle;
-  border: none;
-}
-.btn .b-icon.bi:active {
-  border: 0;
-}
-.row-content {
+
+#row-content {
   margin-left: 80px;
   width: 100vw;
   transition: all 300ms ease-in-out 0s;
